--- a/index.html
+++ b/index.html
@@ -65,6 +65,28 @@
 								</div>
 							</div>
 						</section>
+						<section>
+							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>ИВТ 11</h2>
+									<ul class="actions">
+										<li><a href="/MrFrozzen/Schedule/raw/master/release/IVT_11-app-release.apk" class="button">Скачать</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
+						<section>
+							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>ИВТ 12</h2>
+									<ul class="actions">
+										<li><a href="/MrFrozzen/Schedule/raw/master/release/IVT_12-app-release.apk" class="button">Скачать</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
 					</section>
 
 				<!-- Two -->
@@ -94,7 +116,7 @@
 								</section>
 							</div>
 							<ul class="actions">
-								<li><a href="#" class="button">Скачай уже!</a></li>
+								<li><a href="#one" class="button">Скачай уже!</a></li>
 							</ul>
 						</div>
 					</section>
@@ -128,9 +150,13 @@
 										<li>
 											<h3>Social</h3>
 											<ul class="icons">
+												<li><a href="https://vk.com/mrfrozzen" class="fa-facebook"><span class="label">VK</span></a></li>
 												<li><a href="https://github.com/MrFrozzen" class="fa-github"><span class="label">GitHub</span></a></li>
 											</ul>
 										</li>
+										<h3>Разработчику на пиво</h3>
+										<h5>R942460767159</h5>
+										<h5>ЯДеньги 410014405919846</h5>
 									</ul>
 								</section>
 							</div>
