--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 								<div class="inner">
 									<h2>ИВТ 11</h2>
 									<ul class="actions">
-										<li><a href="/MrFrozzen/Schedule/raw/master/release/IVT_11-app-release.apk" class="button">Скачать</a></li>
+										<li><a href="https://github.com/MrFrozzen/Schedule/raw/master/release/IVT_11-app-release.apk" class="button">Скачать</a></li>
 									</ul>
 								</div>
 							</div>
@@ -82,7 +82,7 @@
 								<div class="inner">
 									<h2>ИВТ 12</h2>
 									<ul class="actions">
-										<li><a href="/MrFrozzen/Schedule/raw/master/release/IVT_12-app-release.apk" class="button">Скачать</a></li>
+										<li><a href="https://github.com/MrFrozzen/Schedule/raw/master/release/IVT_12-app-release.apk" class="button">Скачать</a></li>
 									</ul>
 								</div>
 							</div>
@@ -154,7 +154,7 @@
 												<li><a href="https://github.com/MrFrozzen" class="fa-github"><span class="label">GitHub</span></a></li>
 											</ul>
 										</li>
-										<h3>Разработчику на пиво</h3>
+										<h3>Разработчику на дошик</h3>
 										<h5>R942460767159</h5>
 										<h5>ЯДеньги 410014405919846</h5>
 									</ul>
