--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1></h1>
-							<p>Этот сайт создан для студентов групп ИС/б-11о и ИС/б-12о</a><br />
+							<p>Этот сайт создан для студентов групп ИС/б-11о, ИС/б-12о, ИВТ/б-11о и ИВТ/б-12о</a><br />
 							Здесь можно скачать расписание занятий на свою трубу (Android OS)</a>.</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Скачать</a></li>
