--- a/index.html
+++ b/index.html
@@ -44,49 +44,32 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>ИС 11</h2>
+							<div class="features">
+								<section>									
+									<h3>ИС/б-11о</h3>
 									<ul class="actions">
 										<li><a href="https://github.com/MrFrozzen/Schedule/raw/master/release/IS_11-app-release.apk" class="button">Скачать</a></li>
 									</ul>
-								</div>
-							</div>
-						</section>
-						<section>
-							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>ИС 12</h2>
+								</section>
+								<section>
+									<h3>ИС/б-12о</h3>
 									<ul class="actions">
 										<li><a href="https://github.com/MrFrozzen/Schedule/raw/master/release/IS_12-app-release.apk" class="button">Скачать</a></li>
 									</ul>
-								</div>
-							</div>
-						</section>
-						<section>
-							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>ИВТ 11</h2>
+								</section>
+								<section>
+									<h3>ИВТ/б-11о</h3>
 									<ul class="actions">
 										<li><a href="https://github.com/MrFrozzen/Schedule/raw/master/release/IVT_11-app-release.apk" class="button">Скачать</a></li>
 									</ul>
-								</div>
-							</div>
-						</section>
-						<section>
-							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>ИВТ 12</h2>
+								</section>
+								<section>
+									<h3>ИВТ/б-12о</h3>
 									<ul class="actions">
 										<li><a href="https://github.com/MrFrozzen/Schedule/raw/master/release/IVT_12-app-release.apk" class="button">Скачать</a></li>
 									</ul>
-								</div>
+								</section>
 							</div>
-						</section>
 					</section>
 
 				<!-- Two -->
