--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 											</ul>
 										</li>
 										<h3>Разработчику на дошик</h3>
-										<h5>R942460767159</h5>
+										<h5>WMR R942460767159</h5>
 										<h5>ЯДеньги 410014405919846</h5>
 									</ul>
 								</section>
