--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; MrFrozzen. All rights reserved. 2018</li>
+						<li>&copy; 2018 MrFrozzen. All rights reserved.</li>
 					</ul>
 				</div>
 			</footer>
