--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
 					<nav>
 						<ul>
 							<li><a href="#intro">Добро пожаловать</a></li>
-							<li><a href="#one">Скачать</a></li>
-							<li><a href="#two">Возможности</a></li>
+							<li><a href="#one">Verona player</a></li>
+							<li><a href="#two">Расписание</a></li>
+							<li><a href="#tree">Возможности</a></li>
 							<li><a href="#three">Обратная связь</a></li>
 						</ul>
 					</nav>
@@ -33,16 +34,30 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1></h1>
-							<p>Этот сайт создан для студентов групп ИС/б-11о, ИС/б-12о, ИВТ/б-11о и ИВТ/б-12о</a><br />
-							Здесь можно скачать расписание занятий на свою трубу (Android OS)</a>.</p>
+							<p>Этот сайт создан по приколу</a><br />
+							Здесь можно скачать всякую дичь на свою трубу (Android OS)</a>.</p>
 							<ul class="actions">
-								<li><a href="#one" class="button scrolly">Скачать</a></li>
+								<li><a href="#one" class="button scrolly">Music player</a></li>
+								<li><a href="#two" class="button scrolly">Расписание</a></li>
+							</ul>
+						</div>
+					</section>
+					
+					
+									<!-- Verona -->
+					<section id="one" class="wrapper style1 fullscreen fade-up">
+						<div class="inner">
+							<h1></h1>
+							<p>Verona</a><br />
+							Музыкальный плеер (Android OS)</a>.</p>
+							<ul class="actions">
+								<li><a href="https://github.com/MrFrozzen/Verona/raw/master/apk/Verona_1.0.2-release.apk" class="button scrolly">Скачать</a></li>
 							</ul>
 						</div>
 					</section>
 
-				<!-- One -->
-					<section id="one" class="wrapper style2 spotlights">
+				<!-- Two -->
+					<section id="two" class="wrapper style2 spotlights">
 						<section>
 							<div class="features">
 								<section>									
@@ -73,7 +88,7 @@
 					</section>
 
 				<!-- Two -->
-					<section id="two" class="wrapper style3 fade-up">
+					<section id="tree" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>Что умеет</h2>
 								<div class="features">
