--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 							Музыкальный плеер (Android OS)</a>.</p>
 							<ul class="actions">
 								<li><a href="https://github.com/MrFrozzen/Verona/raw/master/apk/Verona_1.0.2-release.apk" class="button scrolly">Скачать</a></li>
+								<li><a href="https://github.com/MrFrozzen/Verona" class="button scrolly">GitHub</a></li>
 							</ul>
 						</div>
 					</section>
