--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 						<ul>
 							<li><a href="#intro">Добро пожаловать</a></li>
 							<li><a href="#one">Verona player</a></li>
-							<li><a href="#two">Расписание</a></li>
+							<li><a href="#two">Книга рецептов</a></li>
 							<li><a href="#tree">Возможности</a></li>
 							<li><a href="#three">Обратная связь</a></li>
 						</ul>
@@ -38,7 +38,7 @@
 							Здесь можно скачать всякую дичь на свою трубу (Android OS)</a>.</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Music player</a></li>
-								<li><a href="#two" class="button scrolly">Расписание</a></li>
+								<li><a href="#two" class="button scrolly">Книга рецептов</a></li>
 							</ul>
 						</div>
 					</section>
@@ -58,34 +58,16 @@
 					</section>
 
 				<!-- Two -->
-					<section id="two" class="wrapper style2 spotlights">
-						<section>
-							<div class="features">
-								<section>									
-									<h3>ИС/б-11о</h3>
-									<ul class="actions">
-										<li><a href="https://github.com/MrFrozzen/Schedule/raw/master/release/IS_11-app-release.apk" class="button">Скачать</a></li>
-									</ul>
-								</section>
-								<section>
-									<h3>ИС/б-12о</h3>
-									<ul class="actions">
-										<li><a href="https://github.com/MrFrozzen/Schedule/raw/master/release/IS_12-app-release.apk" class="button">Скачать</a></li>
-									</ul>
-								</section>
-								<section>
-									<h3>ИВТ/б-11о</h3>
-									<ul class="actions">
-										<li><a href="https://github.com/MrFrozzen/Schedule/raw/master/release/IVT_11-app-release.apk" class="button">Скачать</a></li>
-									</ul>
-								</section>
-								<section>
-									<h3>ИВТ/б-12о</h3>
-									<ul class="actions">
-										<li><a href="https://github.com/MrFrozzen/Schedule/raw/master/release/IVT_12-app-release.apk" class="button">Скачать</a></li>
-									</ul>
-								</section>
-							</div>
+					<section id="one" class="wrapper style1 fullscreen fade-up">
+						<div class="inner">
+							<h1></h1>
+							<p>CookBook</a><br />
+							Книга рецептов (Android OS)</a>.</p>
+							<ul class="actions">
+								<li><a href="https://github.com/MrFrozzen/Verona/raw/master/apk/Verona_1.0.2-release.apk" class="button scrolly">Скачать</a></li>
+								<li><a href="https://github.com/MrFrozzen/Verona" class="button scrolly">GitHub</a></li>
+							</ul>
+						</div>
 					</section>
 
 				<!-- Two -->
