--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 						<ul>
 							<li><a href="#intro">Добро пожаловать</a></li>
 							<li><a href="#one">Verona player</a></li>
-							<li><a href="#two">Книга рецептов</a></li>
-							<li><a href="#tree">Возможности</a></li>
+							<li><a href="#two">CookBook</a></li>
+							<li><a href="#tree">Плитки</a></li>
 							<li><a href="#three">Обратная связь</a></li>
 						</ul>
 					</nav>
@@ -38,7 +38,7 @@
 							Здесь можно скачать всякую дичь на свою трубу (Android OS)</a>.</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Music player</a></li>
-								<li><a href="#two" class="button scrolly">Книга рецептов</a></li>
+								<li><a href="#two" class="button scrolly">CookBook</a></li>
 							</ul>
 						</div>
 					</section>
@@ -57,8 +57,8 @@
 						</div>
 					</section>
 
-				<!-- Two -->
-					<section id="one" class="wrapper style1 fullscreen fade-up">
+				<!-- CookBook -->
+					<section id="two" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1></h1>
 							<p>CookBook</a><br />
@@ -73,17 +73,17 @@
 				<!-- Two -->
 					<section id="tree" class="wrapper style3 fade-up">
 						<div class="inner">
-							<h2>Что умеет</h2>
+							<h2>Плитки</h2>
 								<div class="features">
 								<section>
 									<span class="icon major fa-code"></span>
-									<h3>Показывать расписание</h3>
-									<p>Теперь, когда ты идешь в универ не надо гадать какая сейчас неделя и что за предмет.</p>
+									<h3>Код</h3>
+									<p>Использую разые языки</p>
 								</section>
 								<section>
 									<span class="icon major fa-lock"></span>
-									<h3>Хранить домашку</h3>
-									<p>Стараешься, учишься? Не забудь про домашку.</p>
+									<h3>Замок</h3>
+									<p>Он класный.</p>
 								</section>
 								<section>
 									<span class="icon major fa-cog"></span>
