--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 							<p>CookBook</a><br />
 							Книга рецептов (Android OS)</a>.</p>
 							<ul class="actions">
-								<li><a href="https://github.com/MrFrozzen/Verona/raw/master/apk/Verona_1.0.2-release.apk" class="button scrolly">Скачать</a></li>
-								<li><a href="https://github.com/MrFrozzen/Verona" class="button scrolly">GitHub</a></li>
+								<li><a href="https://github.com/MrFrozzen/MrFrozzen.github.io/raw/master/apk/cookbook-release.apk" class="button scrolly">Скачать</a></li>
+								<li><a href="https://github.com/MrFrozzen" class="button scrolly">GitHub</a></li>
 							</ul>
 						</div>
 					</section>
