--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 							Книга рецептов (Android OS)</a>.</p>
 							<ul class="actions">
 								<li><a href="https://github.com/MrFrozzen/MrFrozzen.github.io/raw/master/apk/cookbook-release.apk" class="button scrolly">Скачать</a></li>
-								<li><a href="https://github.com/MrFrozzen" class="button scrolly">GitHub</a></li>
+								<li><a href="https://github.com/MrFrozzen/Cookbook" class="button scrolly">GitHub</a></li>
 							</ul>
 						</div>
 					</section>
