--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 						<div class="inner">
 							<h1></h1>
 							<p>Этот сайт создан по приколу</a><br />
-							Здесь можно скачать всякую дичь на свою трубу (Android OS)</a>.</p>
+							Здесь можно скачать всякую всячину на свой Android смартфон</a>.</p>
 							<ul class="actions">
 								<li><a href="#two" class="button scrolly">CookBook</a></li>
 							</ul>
@@ -49,7 +49,7 @@
 							<p>CookBook</a><br />
 							Книга рецептов (Android OS)</a>.</p>
 							<ul class="actions">
-								<li><a href="https://github.com/MrFrozzen/MrFrozzen.github.io/raw/master/apk/cookbook-release.apk" class="button scrolly">Скачать</a></li>
+								<li><a href="https://play.google.com/store/apps/details?id=ru.mrfrozzen.cookbook" class="button scrolly">Скачать</a></li>
 								<li><a href="https://github.com/MrFrozzen/Cookbook" class="button scrolly">GitHub</a></li>
 							</ul>
 						</div>
