--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
 					<nav>
 						<ul>
 							<li><a href="#intro">Добро пожаловать</a></li>
-							<li><a href="#two">CookBook</a></li>
-							<li><a href="#tree">Плитки</a></li>
-							<li><a href="#three">Обратная связь</a></li>
+							<li><a href="#one">Сапер</a></li>
+							<li><a href="#two">Сканер QR rjljd</a></li>
+							<li><a href="#three">Книга рецептов</a></li>
+							<li><a href="#table">Плитки</a></li>
+							<li><a href="#kontakt">Обратная связь</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -36,14 +38,42 @@
 							<p>Этот сайт создан по приколу</a><br />
 							Здесь можно скачать всякую всячину на свой Android смартфон</a>.</p>
 							<ul class="actions">
-								<li><a href="#two" class="button scrolly">CookBook</a></li>
+								<li><a href="#one" class="button scrolly">Сапер</a></li>
+								<li><a href="#two" class="button scrolly">Сканер QR кодов</a></li>
+								<li><a href="#three" class="button scrolly">CookBook</a></li>
 							</ul>
 						</div>
 					</section>
 					
 
-				<!-- CookBook -->
+				<!-- Сапер -->
+					<section id="one" class="wrapper style1 fullscreen fade-up">
+						<div class="inner">
+							<h1></h1>
+							<p>Сапер</a><br />
+							Класическая игра (Android OS)</a>.</p>
+							<ul class="actions">
+								<li><a href="https://play.google.com/store/apps/details?id=ru.mrfrozzen.minesweeper" class="button scrolly">Скачать</a></li>
+								<li><a href="https://github.com/MrFrozzen/Minesweeper" class="button scrolly">GitHub</a></li>
+							</ul>
+						</div>
+					</section>
+
+				<!-- QR -->
 					<section id="two" class="wrapper style1 fullscreen fade-up">
+						<div class="inner">
+							<h1></h1>
+							<p>QR</a><br />
+							Простой сканер QR кодов (Android OS)</a>.</p>
+							<ul class="actions">
+								<li><a href="https://play.google.com/store/apps/details?id=ru.mrfrozzen.qrcode" class="button scrolly">Скачать</a></li>
+								<li><a href="https://github.com/MrFrozzen/Qr" class="button scrolly">GitHub</a></li>
+							</ul>
+						</div>
+					</section>
+
+				<!-- CookBook -->
+					<section id="three" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1></h1>
 							<p>CookBook</a><br />
@@ -55,8 +85,8 @@
 						</div>
 					</section>
 
-				<!-- Two -->
-					<section id="tree" class="wrapper style3 fade-up">
+				<!-- Table -->
+					<section id="table" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>Плитки</h2>
 								<div class="features">
@@ -87,8 +117,8 @@
 						</div>
 					</section>
 
-				<!-- Three -->
-					<section id="three" class="wrapper style1 fade-up">
+				<!-- Kontakt -->
+					<section id="kontakt" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>Напиши ченить</h2>
 							<p>Пофиг что, всеравно кнопка "Отправить" не работает.</p>
@@ -135,7 +165,7 @@
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; 2019 MrFrozzen. All rights reserved.</li>
+						<li>&copy; 2020 MrFrozzen. All rights reserved.</li>
 					</ul>
 				</div>
 			</footer>
