--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 						<ul>
 							<li><a href="#intro">Добро пожаловать</a></li>
 							<li><a href="#one">Сапер</a></li>
-							<li><a href="#two">Сканер QR rjljd</a></li>
+							<li><a href="#two">Сканер QR кодов</a></li>
 							<li><a href="#three">Книга рецептов</a></li>
 							<li><a href="#table">Плитки</a></li>
 							<li><a href="#kontakt">Обратная связь</a></li>
@@ -40,7 +40,7 @@
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Сапер</a></li>
 								<li><a href="#two" class="button scrolly">Сканер QR кодов</a></li>
-								<li><a href="#three" class="button scrolly">CookBook</a></li>
+								<li><a href="#three" class="button scrolly">Книга рецептов</a></li>
 							</ul>
 						</div>
 					</section>
